@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-11T08:10:04Z",
-  "count_outdated" : 1798,
-  "uniques_outdated" : 123,
-  "count" : 1870,
-  "uniques" : 131,
+  "timestamp" : "2022-08-11T16:09:59Z",
+  "count_outdated" : 1800,
+  "uniques_outdated" : 124,
+  "count" : 1872,
+  "uniques" : 132,
   "views" : [
-    {
-      "timestamp": "2022-07-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-29T00:00:00Z",
       "count": 3,
@@ -58,6 +51,13 @@
       "timestamp": "2022-08-10T00:00:00Z",
       "count": 5,
       "count_minmax": [ 1, 5 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
